--- a/index.html
+++ b/index.html
@@ -15,23 +15,128 @@
 
 <body>
 
-    <!-- Inizio Header -->
-    <header>
-
-    </header>
-    <!-- Fine header -->
-
-    <!-- Inizio main -->
-    <main>
-
-    </main>
-    <!-- Fine main -->
-
-    <!-- Inizio footer -->
-    <footer>
-
-    </footer>
-    <!-- Fine footer -->
+    <div id="griglia">
+        <div class="quadrato"></div>
+        <div class="quadrato"></div>
+        <div class="quadrato"></div>
+        <div class="quadrato"></div>
+        <div class="quadrato"></div>
+        <div class="quadrato"></div>
+        <div class="quadrato"></div>
+        <div class="quadrato"></div>
+        <div class="quadrato"></div>
+        <div class="quadrato"></div>
+        <div class="quadrato"></div>
+        <div class="quadrato"></div>
+        <div class="quadrato"></div>
+        <div class="quadrato"></div>
+        <div class="quadrato"></div>
+        <div class="quadrato"></div>
+        <div class="quadrato"></div>
+        <div class="quadrato"></div>
+        <div class="quadrato"></div>
+        <div class="quadrato"></div>
+        <div class="quadrato"></div>
+        <div class="quadrato"></div>
+        <div class="quadrato"></div>
+        <div class="quadrato"></div>
+        <div class="quadrato"></div>
+        <div class="quadrato"></div>
+        <div class="quadrato"></div>
+        <div class="quadrato"></div>
+        <div class="quadrato"></div>
+        <div class="quadrato"></div>
+        <div class="quadrato"></div>
+        <div class="quadrato"></div>
+        <div class="quadrato"></div>
+        <div class="quadrato"></div>
+        <div class="quadrato"></div>
+        <div class="quadrato"></div>
+        <div class="quadrato"></div>
+        <div class="quadrato"></div>
+        <div class="quadrato"></div>
+        <div class="quadrato"></div>
+        <div class="quadrato"></div>
+        <div class="quadrato"></div>
+        <div class="quadrato"></div>
+        <div class="quadrato"></div>
+        <div class="quadrato"></div>
+        <div class="quadrato"></div>
+        <div class="quadrato"></div>
+        <div class="quadrato"></div>
+        <div class="quadrato"></div>
+        <div class="quadrato"></div>
+        <div class="quadrato"></div>
+        <div class="quadrato"></div>
+        <div class="quadrato"></div>
+        <div class="quadrato"></div>
+        <div class="quadrato"></div>
+        <div class="quadrato"></div>
+        <div class="quadrato"></div>
+        <div class="quadrato"></div>
+        <div class="quadrato"></div>
+        <div class="quadrato"></div>
+        <div class="quadrato"></div>
+        <div class="quadrato"></div>
+        <div class="quadrato"></div>
+        <div class="quadrato"></div>
+        <div class="quadrato"></div>
+        <div class="quadrato"></div>
+        <div class="quadrato"></div>
+        <div class="quadrato"></div>
+        <div class="quadrato"></div>
+        <div class="quadrato"></div>
+        <div class="quadrato"></div>
+        <div class="quadrato"></div>
+        <div class="quadrato"></div>
+        <div class="quadrato"></div>
+        <div class="quadrato"></div>
+        <div class="quadrato"></div>
+        <div class="quadrato"></div>
+        <div class="quadrato"></div>
+        <div class="quadrato"></div>
+        <div class="quadrato"></div>
+        <div class="quadrato"></div>
+        <div class="quadrato"></div>
+        <div class="quadrato"></div>
+        <div class="quadrato"></div>
+        <div class="quadrato"></div>
+        <div class="quadrato"></div>
+        <div class="quadrato"></div>
+        <div class="quadrato"></div>
+        <div class="quadrato"></div>
+        <div class="quadrato"></div>
+        <div class="quadrato"></div>
+        <div class="quadrato"></div>
+        <div class="quadrato"></div>
+        <div class="quadrato"></div>
+        <div class="quadrato"></div>
+        <div class="quadrato"></div>
+        <div class="quadrato"></div>
+        <div class="quadrato"></div>
+        <div class="quadrato"></div>
+        <div class="quadrato"></div>
+        <div class="quadrato"></div>
+        <div class="quadrato"></div>
+        <div class="quadrato"></div>
+        <div class="quadrato"></div>
+        <div class="quadrato"></div>
+        <div class="quadrato"></div>
+        <div class="quadrato"></div>
+        <div class="quadrato"></div>
+        <div class="quadrato"></div>
+        <div class="quadrato"></div>
+        <div class="quadrato"></div>
+        <div class="quadrato"></div>
+        <div class="quadrato"></div>
+        <div class="quadrato"></div>
+        <div class="quadrato"></div>
+        <div class="quadrato"></div>
+        <div class="quadrato"></div>
+        <div class="quadrato"></div>
+        <div class="quadrato"></div>
+        <div class="quadrato"></div>
+    </div>
 
     <script src="./main.js"></script>
 </body>
