--- a/index.html
+++ b/index.html
@@ -14,8 +14,12 @@
 </head>
 
 <body>
-
     <button id="btn-play">Avvia Gioco</button>
+    <select name="de" id="difficolta">
+        <option value="facile">Facile</option>
+        <option value="Medio">Medio</option>
+        <option value="Difficile">Difficile</option>
+    </select>
     <div id="griglia">
     </div>
 
