Aggiunti stili e titoli

--- a/index.html
+++ b/index.html
@@ -14,12 +14,20 @@
 </head>
 
 <body>
-    <button id="btn-play">Avvia Gioco</button>
-    <select name="de" id="difficolta">
-        <option value="facile">Facile</option>
-        <option value="Medio">Medio</option>
-        <option value="Difficile">Difficile</option>
-    </select>
+
+    <div class="contenitore">
+        <h1>Inizia il Gioco</h1>
+
+        <h5>Scegli la difficoltà</h5>
+        <select name="de" id="difficolta">
+            <option value="facile">Facile</option>
+            <option value="Medio">Medio</option>
+            <option value="Difficile">Difficile</option>
+        </select>
+
+        <button id="btn-play">Avvia Gioco</button>
+    </div>
+
     <div id="griglia">
     </div>
 
