correzzione display none

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body>
 
-    <div class="contenitore">
+    <div id="inizio" class="contenitore">
         <h1>Inizia il Gioco</h1>
 
         <h5>Scegli la difficoltà</h5>
