Bonus 1 - rimuovo i numeri all'interno delle celle

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
         <h5>Scegli la difficoltà</h5>
         <select name="de" id="difficolta">
-            <option value="facile">Facile</option>
+            <option value="Facile">Facile</option>
             <option value="Medio">Medio</option>
             <option value="Difficile">Difficile</option>
         </select>
