Aggiungo bottone restart

--- a/index.html
+++ b/index.html
@@ -31,6 +31,10 @@
     <div id="griglia">
     </div>
 
+    <div id="restart" class="contenitore d-none">
+        <button id="btn-restart">Ricomincia</button>
+    </div>
+
     <script src="./main.js"></script>
 </body>
 
