Aggiungo rimozione delle classi alla griglia al restart

--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
 
         <h5>Scegli la difficoltà</h5>
         <select name="de" id="difficolta">
-            <option value="Facile">Facile</option>
-            <option value="Medio">Medio</option>
-            <option value="Difficile">Difficile</option>
+            <option value="grid-facile">Facile</option>
+            <option value="grid-medio">Medio</option>
+            <option value="grid-difficile">Difficile</option>
         </select>
 
         <button id="btn-play">Avvia Gioco</button>
